commit angular file

--- a/angular-app/src/app/app.component.html
+++ b/angular-app/src/app/app.component.html
@@ -1,4 +1,14 @@
-<app-header></app-header>
-<h1>
-  {{title}}
-</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <app-header></app-header>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
+      <router-outlet></router-outlet>
+      <!--<app-enrollment></app-enrollment>
+      <app-user-details></app-user-details>-->
+    </div>
+  </div>
+</div>
