--- a/angular-app/src/app/component/header/header.component.html
+++ b/angular-app/src/app/component/header/header.component.html
@@ -1,10 +1,8 @@
-<header>
-  <a href="#">LOGO</a>
-  <nav>
-    <ul>
-      <li><a href="javascript:void(0);">Home</a></li>
-      <li><a href="javascript:void(0);">About</a></li>
-      <li><a href="javascript:void(0);">Contact us</a></li>
-    </ul>
-  </nav>
-</header>
+<ul class="nav nav-tabs">
+  <li class="nav-item">
+    <a class="nav-link" routerLink="/" routerLinkActive="active">Enroll</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" routerLink="/user" routerLinkActive="active">User Details</a>
+  </li>
+</ul>
