--- a/angular-app/src/app/enrollment/enrollment.component.html
+++ b/angular-app/src/app/enrollment/enrollment.component.html
@@ -4,7 +4,7 @@
 </div>
 <hr/>
 <div class="col-md-6">
-  <form (ngSubmit)="onSubmit($event,form)" #form="ngForm">
+  <form (submit)="onSubmit($event,form)" #form="ngForm">
     <div class="form-group">
       <label for="exampleInputEmail1">Employee Name</label>
       <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter name" name="name" ngModel>
